--- a/tests/beman/lazy/CMakeLists.txt
+++ b/tests/beman/lazy/CMakeLists.txt
@@ -3,4 +3,7 @@
 add_executable(beman.lazy.tests.lazy)
 target_sources(beman.lazy.tests.lazy PRIVATE lazy.test.cpp)
 target_link_libraries(beman.lazy.tests.lazy PRIVATE beman::lazy)
-add_test(NAME beman.lazy.tests.lazy COMMAND $<TARGET_FILE:beman.lazy.tests.lazy>)
+add_test(
+    NAME beman.lazy.tests.lazy
+    COMMAND $<TARGET_FILE:beman.lazy.tests.lazy>
+)
