Disable fail fast on compiler-test

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -177,6 +177,7 @@ jobs:
   compiler-test:
     runs-on: ubuntu-24.04
     strategy:
+      fail-fast: false
       matrix:
         compilers:
           - class: GNU
