--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -61,8 +61,9 @@ jobs:
         cpp_version: [20, 23, 26]
         cmake_args:
           - description: "Default"
-          - description: "TSan"
-            args: "-DBEMAN_BUILDSYS_SANITIZER=TSan"
+            # Linux has a TSan bug: FATAL: ThreadSanitizer: unexpected memory mapping
+            # - description: "TSan"
+            #   args: "-DBEMAN_BUILDSYS_SANITIZER=TSan"
           - description: "MaxSan"
             args: "-DBEMAN_BUILDSYS_SANITIZER=MaxSan"
         include:
@@ -86,16 +87,6 @@ jobs:
             # MSVC does not support thread sanitizer
           - platform:
               description: "Windows MSVC"
-            cmake_args:
-              description: "TSan"
-            # Linux has a TSan bug: FATAL: ThreadSanitizer: unexpected memory mapping
-          - platform:
-              description: "Ubuntu GCC"
-            cmake_args:
-              description: "TSan"
-            # Linux has a TSan bug: FATAL: ThreadSanitizer: unexpected memory mapping
-          - platform:
-              description: "Ubuntu LLVM"
             cmake_args:
               description: "TSan"
 
