change the CMakeLists.txt formatting to make the checker happy

--- a/tests/beman/lazy/CMakeLists.txt
+++ b/tests/beman/lazy/CMakeLists.txt
@@ -1,6 +1,14 @@
 # SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
 
-list(APPEND lazy_tests any_scheduler inline_scheduler lazy poly scheduler_of)
+list(
+    APPEND
+    lazy_tests
+    any_scheduler
+    inline_scheduler
+    lazy
+    poly
+    scheduler_of
+)
 
 foreach(test ${lazy_tests})
     add_executable(beman.lazy.tests.${test})
