restructered the allocator support to embed the allocator

--- a/tests/beman/lazy/CMakeLists.txt
+++ b/tests/beman/lazy/CMakeLists.txt
@@ -4,6 +4,7 @@ list(
     APPEND
     lazy_tests
     allocator_of
+    allocator_support
     any_scheduler
     find_allocator
     inline_scheduler
