refactored the approach to handling results/completions

--- a/tests/beman/lazy/CMakeLists.txt
+++ b/tests/beman/lazy/CMakeLists.txt
@@ -3,6 +3,10 @@
 list(
     APPEND
     lazy_tests
+    sub_visit
+    result_type
+    promise_base
+    completion
     handle
     final_awaiter
     allocator_of
