--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,9 +31,8 @@ include(GNUInstallDirs)
 FetchContent_Declare(
     execution
     # for local development, use SOURCE_DIR <path-to>/execution
-    #GIT_REPOSITORY https://github.com/bemanproject/execution
-    #GIT_TAG e9c3032
-    SOURCE_DIR /opt/src/execution
+    GIT_REPOSITORY https://github.com/bemanproject/execution
+    GIT_TAG e9c3032
 )
 FetchContent_MakeAvailable(execution)
 
