started to refector the promise_type

--- a/tests/beman/lazy/CMakeLists.txt
+++ b/tests/beman/lazy/CMakeLists.txt
@@ -3,6 +3,9 @@
 list(
     APPEND
     lazy_tests
+    error_types_of
+    state_base
+    with_error
     sub_visit
     result_type
     promise_base
