added a very basic allocator example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -8,6 +8,7 @@ set(ALL_EXAMPLES
     c++now-cancel
     c++now-return
     c++now-with_error
+    c++now-allocator
     affinity
     escaped-exception
     co_await-result
