--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -1,3 +1,7 @@
+MD025: false
+MD046:
+  style: fenced
+
 # MD033/no-inline-html : Inline HTML : https://github.com/DavidAnson/markdownlint/blob/v0.35.0/doc/md033.md
 # Disable inline html linter is needed for <details> <summary>
 MD033: false
