--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -34,7 +34,11 @@ message("Examples to be built: ${ALL_EXAMPLES}")
 foreach(example ${ALL_EXAMPLES})
     add_executable(beman.task.examples.${example})
     target_sources(beman.task.examples.${example} PRIVATE ${example}.cpp)
-    target_link_libraries(beman.task.examples.${example} beman::task beman::net)
+    if(WIN32)
+        target_link_libraries(beman.task.examples.${example} beman::task)
+    else()
+        target_link_libraries(beman.task.examples.${example} beman::task beman::net)
+    endif()
     add_test(
         NAME beman.task.examples.${example}
         COMMAND $<TARGET_FILE:beman.task.examples.${example}>
